--- a/requirements.txt
+++ b/requirements.txt
@@ -1,17 +1,6 @@
 liac-arff==2.1.0
-base64
-bz2
-copy
 igraph
 numpy
-pickle
-pkgutil
-random
-shlex
-shutil
-subprocess
-sys
-tempfile
-unittest
 scipy
 scikit-learn
+six
