--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,7 @@ matrix:
           python: 2.7
           services:
             - docker
-          env: TOXENV=py2
+          env: TOXENV=linux_py2
         - os: linux
           dist: trusty
           language: python
@@ -15,15 +15,26 @@ matrix:
           services:
             - docker
           env: TOXENV=py3
+        - os: osx
+          language: generic
+          env: TOXENV=py3
 script:
-- if [[ "$TOXENV" == "py2" ]]; then docker exec -it scikit_multilearn_dev_test_docker python -m pytest /home/python-dev/repo; fi
-- if [[ "$TOXENV" == "py3" ]]; then docker exec -it scikit_multilearn_dev_test_docker python3 -m pytest /home/python-dev/repo; fi
+- if [[ "$TOXENV" == "linux_py2" ]]; then docker exec -it scikit_multilearn_dev_test_docker python -m pytest /home/python-dev/repo; fi
+- if [[ "$TOXENV" == "linux_py3" ]]; then docker exec -it scikit_multilearn_dev_test_docker python3 -m pytest /home/python-dev/repo; fi
+- if [[ "$TRAVIS_OS_NAME" == "osx" ]];   then python3 -m pytest $TRAVIS_BUILD_DIR; fi
+
 before_install:
-- docker pull niedakh/scikit-multilearn-dev:latest
+- if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then docker pull niedakh/scikit-multilearn-dev:latest; fi
+- if [[ "$TRAVIS_OS_NAME" == "osx" ]];   then brew update                                     ; fi
+- if [[ "$TRAVIS_OS_NAME" == "osx" ]];   then brew tap homebrew/science                       ; fi
+- if [[ "$TRAVIS_OS_NAME" == "osx" ]];   then brew install python3 graph-tool                 ; fi
+- if [[ "$TRAVIS_OS_NAME" == "osx" ]];   then pip install -r $TRAVIS_BUILD_DIR/requirements-test.txt; fi
+
 install:
-- docker run -e "MEKA_CLASSPATH=/opt/meka/lib" -v "$TRAVIS_BUILD_DIR:/home/python-dev/repo"
-  --name scikit_multilearn_dev_test_docker -d niedakh/scikit-multilearn-dev:latest
-- find $TRAVIS_BUILD_DIR -name \*.pyc -delete
+- if [[ "$TRAVIS_OS_NAME" != "osx" ]];   then docker run -e "MEKA_CLASSPATH=/opt/meka/lib" -v "$TRAVIS_BUILD_DIR:/home/python-dev/repo" --name scikit_multilearn_dev_test_docker -d niedakh/scikit-multilearn-dev:latest; fi
+- if [[ "$TRAVIS_OS_NAME" != "osx" ]];   then find $TRAVIS_BUILD_DIR -name \*.pyc -delete; fi
+- if [[ "$TRAVIS_OS_NAME" == "osx" ]];   then pip install -r $TRAVIS_BUILD_DIR/requirements-test.txt; fi
+
 notifications:
   slack:
     secure: aTCuexl+J0s+ll8sS+p65Atmr9hgOYg0Qkv1nOwb+2oVlJtIYpwLymYZdMymeMtcbK8nlCKGuZRj9jpowzLvSU5kmmmbUdCskEzLf8guE/TUN5iMcIdvKnlAxfJ/MBXw59bjIuF3saYmzpkYbaBvj150M/tXMkYMLSgqwFMQq6U=
