--- a/.travis.yml
+++ b/.travis.yml
@@ -27,6 +27,7 @@ before_install:
 - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then docker pull niedakh/scikit-multilearn-dev:latest; fi
 - if [[ "$TRAVIS_OS_NAME" == "osx" ]];   then brew update                                     ; fi
 - if [[ "$TRAVIS_OS_NAME" == "osx" ]];   then brew tap brewsci/science                        ; fi
+- if [[ "$TRAVIS_OS_NAME" == "osx" ]];   then brew tap brewsci/bio                            ; fi
 - if [[ "$TRAVIS_OS_NAME" == "osx" ]];   then brew install python3 graph-tool                 ; fi
 - if [[ "$TRAVIS_OS_NAME" == "osx" ]];   then pip install -r $TRAVIS_BUILD_DIR/requirements-test.txt; fi
 
