--- a/.travis.yml
+++ b/.travis.yml
@@ -21,14 +21,15 @@ matrix:
 script:
 - if [[ "$TOXENV" == "linux_py2" ]]; then docker exec -it scikit_multilearn_dev_test_docker python -m pytest /home/python-dev/repo; fi
 - if [[ "$TOXENV" == "linux_py3" ]]; then docker exec -it scikit_multilearn_dev_test_docker python3 -m pytest /home/python-dev/repo; fi
-- if [[ "$TRAVIS_OS_NAME" == "osx" ]];   then python3 -m pytest $TRAVIS_BUILD_DIR; fi
+- if [[ "$TRAVIS_OS_NAME" == "osx" ]];   then python -m pytest $TRAVIS_BUILD_DIR; fi
 
 before_install:
-- if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then docker pull niedakh/scikit-multilearn-dev:latest; fi
-- if [[ "$TRAVIS_OS_NAME" == "osx" ]];   then brew update                                     ; fi
-- if [[ "$TRAVIS_OS_NAME" == "osx" ]];   then brew tap brewsci/science                        ; fi
-- if [[ "$TRAVIS_OS_NAME" == "osx" ]];   then brew tap brewsci/bio                            ; fi
-- if [[ "$TRAVIS_OS_NAME" == "osx" ]];   then brew install python3 graph-tool                 ; fi
+- if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then docker pull niedakh/scikit-multilearn-dev:latest      ; fi
+- if [[ "$TRAVIS_OS_NAME" == "osx" ]];   then brew update                                           ; fi
+- if [[ "$TRAVIS_OS_NAME" == "osx" ]];   then brew tap brewsci/science                              ; fi
+- if [[ "$TRAVIS_OS_NAME" == "osx" ]];   then brew tap brewsci/bio                                  ; fi
+- if [[ "$TRAVIS_OS_NAME" == "osx" ]];   then brew upgrade python                                   ; fi
+- if [[ "$TRAVIS_OS_NAME" == "osx" ]];   then brew install graph-tool                               ; fi
 - if [[ "$TRAVIS_OS_NAME" == "osx" ]];   then pip install -r $TRAVIS_BUILD_DIR/requirements-test.txt; fi
 
 install:
