--- a/.travis.yml
+++ b/.travis.yml
@@ -25,7 +25,7 @@ script:
 
 before_install:
 - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then docker pull niedakh/scikit-multilearn-dev:latest      ; fi
-- if [[ "$TRAVIS_OS_NAME" == "osx" ]];   then pip uninstall -y numpy                                ; fi
+- if [[ "$TRAVIS_OS_NAME" == "osx" ]];   then pip2 uninstall -y numpy                                ; fi
 - if [[ "$TRAVIS_OS_NAME" == "osx" ]];   then brew uninstall oclint                                 ; fi
 - if [[ "$TRAVIS_OS_NAME" == "osx" ]];   then brew update                                           ; fi
 - if [[ "$TRAVIS_OS_NAME" == "osx" ]];   then brew tap brewsci/science                              ; fi
