--- a/.travis.yml
+++ b/.travis.yml
@@ -32,12 +32,11 @@ before_install:
 - if [[ "$TRAVIS_OS_NAME" == "osx" ]];   then brew tap brewsci/bio                                  ; fi
 - if [[ "$TRAVIS_OS_NAME" == "osx" ]];   then brew upgrade python                                   ; fi
 - if [[ "$TRAVIS_OS_NAME" == "osx" ]];   then brew install graph-tool                               ; fi
-- if [[ "$TRAVIS_OS_NAME" == "osx" ]];   then pip install -r $TRAVIS_BUILD_DIR/requirements-test.txt; fi
 
 install:
 - if [[ "$TRAVIS_OS_NAME" != "osx" ]];   then docker run -e "MEKA_CLASSPATH=/opt/meka/lib" -v "$TRAVIS_BUILD_DIR:/home/python-dev/repo" --name scikit_multilearn_dev_test_docker -d niedakh/scikit-multilearn-dev:latest; fi
 - if [[ "$TRAVIS_OS_NAME" != "osx" ]];   then find $TRAVIS_BUILD_DIR -name \*.pyc -delete; fi
-- if [[ "$TRAVIS_OS_NAME" == "osx" ]];   then pip install -r $TRAVIS_BUILD_DIR/requirements-test.txt; fi
+- if [[ "$TRAVIS_OS_NAME" == "osx" ]];   then pip3 install -r $TRAVIS_BUILD_DIR/requirements-test.txt; fi
 
 notifications:
   slack:
