--- a/appveyor.yml
+++ b/appveyor.yml
@@ -67,10 +67,10 @@ install:
   # compiled extensions and are not provided as pre-built wheel packages,
   # pip will build them from source using the MSVC compiler matching the
   # target Python version and architecture
-  - "%CMD_IN_ENV% pip install -r requirements/base.txt"
-  - "%CMD_IN_ENV% pip install -r requirements/meka.txt"
-  - "%CMD_IN_ENV% pip install -r requirements/gpl.txt"
-  - "%CMD_IN_ENV% pip install -r requirements/test.txt"
+  - "%CMD_IN_ENV% pip install -r requirements\base.txt"
+  - "%CMD_IN_ENV% pip install -r requirements\meka.txt"
+  - "%CMD_IN_ENV% pip install -r requirements\gpl.txt"
+  - "%CMD_IN_ENV% pip install -r requirements\test.txt"
 
 #build_script:
   # Build the compiled extension
