--- a/appveyor.yml
+++ b/appveyor.yml
@@ -3,7 +3,7 @@ environment:
     # SDK v7.0 MSVC Express 2008's SetEnv.cmd script will fail if the
     # /E:ON and /V:ON options are not enabled in the batch script intepreter
     # See: http://stackoverflow.com/a/13751649/163740
-    CMD_IN_ENV: "cmd /E:ON /V:ON /C .\\appveyor\\run_with_env.cmd"
+    CMD_IN_ENV: "cmd /E:ON /V:ON /C .\\_appveyor\\run_with_env.cmd"
 
   matrix:
 
@@ -67,10 +67,10 @@ install:
   # compiled extensions and are not provided as pre-built wheel packages,
   # pip will build them from source using the MSVC compiler matching the
   # target Python version and architecture
-  - "%CMD_IN_ENV% pip install -r requirements\\base.txt"
-  - "%CMD_IN_ENV% pip install -r requirements\\meka.txt"
-  - "%CMD_IN_ENV% pip install -r requirements\\gpl.txt"
-  - "%CMD_IN_ENV% pip install -r requirements\\test.txt"
+  - "pip install -r requirements\\base.txt"
+  - "pip install -r requirements\\meka.txt"
+  - "pip install -r requirements\\gpl.txt"
+  - "pip install -r requirements\\test.txt"
 
 #build_script:
   # Build the compiled extension
@@ -78,7 +78,7 @@ install:
 
 test_script:
   # Run the project tests
-  - "%CMD_IN_ENV% python py.test"
+  - "python py.test"
 
 after_test:
   # If tests are successful, create binary packages for the project.
