--- a/appveyor.yml
+++ b/appveyor.yml
@@ -48,13 +48,10 @@ install:
   - ECHO "Installed SDKs:"
   - ps: "ls \"C:/Program Files/Microsoft SDKs/Windows\""
 
-  - ECHO "Installed Java:"
-  - ps: "ls \"%JAVA_HOME%\""
-
   - mkdir C:\projects\scikit-multilearn\MEKA\
   - Start-FileDownload 'https://adams.cms.waikato.ac.nz/snapshots/meka/meka-snapshot.zip'
   - 7z x meka-snapshot.zip -oC:\\projects\\scikit-multilearn\\MEKA -y > nul
-  - ps: "ls \"%MEKA_CLASSPATH%\""
+  - ps: "ls %MEKA_CLASSPATH"
 
   # Install Python (from the official .msi of http://python.org) and pip when
   # not already installed.
