--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,3 +1,6 @@
+# This is not a .NET project, so we build SpiceyPy in the install step.
+build: off
+
 environment:
   global:
     # SDK v7.0 MSVC Express 2008's SetEnv.cmd script will fail if the
