--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,6 +1,17 @@
 # This is not a .NET project, so we build SpiceyPy in the install step.
 build: off
 
+notifications:
+  - provider: Slack
+    auth_token:
+    secure: BrhBGMR/27/Td7uDKiWlFxCOCivXCKFIOl5s3uJsmhxnxKuicFFbRil2AsfaZVXClyL72OmBi4R3RYtNMFSDWjd36qtAwEjIFrt/4XhG5GY=
+    channel: '#appveyor'
+
+#  - provider: GitHubPullRequest
+#    auth_token:
+#      secure: kBl9BlxvRMr9liHmnBs14A==
+#    template: "{{#passed}}:white_check_ ..."
+
 environment:
   global:
     # SDK v7.0 MSVC Express 2008's SetEnv.cmd script will fail if the
