--- a/appveyor.yml
+++ b/appveyor.yml
@@ -101,12 +101,12 @@ test_script:
   # Run the project tests
   - "py.test skmultilearn"
 
-after_test:
+#after_test:
   # If tests are successful, create binary packages for the project.
   #- "%CMD_IN_ENV% python setup.py bdist_wheel"
   #- "%CMD_IN_ENV% python setup.py bdist_wininst"
   #- "%CMD_IN_ENV% python setup.py bdist_msi"
-  - ps: "ls dist"
+  #- ps: "ls dist"
 
 #artifacts:
   # Archive the generated packages in the ci.appveyor.com build report.
