--- a/.travis.yml
+++ b/.travis.yml
@@ -1,21 +1,22 @@
 matrix:
     include:
-        - os: linux
-          dist: trusty
-          sudo: required
-          language: python
-          python: 2.7
-          services:
-            - docker
-          env: TOXENV=linux_py2
-        - os: linux
-          dist: trusty
-          language: python
-          python: 3.3
-          services:
-            - docker
-          env: TOXENV=linux_py3
+#        - os: linux
+#          dist: trusty
+#          sudo: required
+#          language: python
+#          python: 2.7
+#          services:
+#            - docker
+#          env: TOXENV=linux_py2
+#        - os: linux
+#          dist: trusty
+#          language: python
+#          python: 3.3
+#          services:
+#            - docker
+#          env: TOXENV=linux_py3
         - os: osx
+          env: MEKA_CLASSPATH=/opt/meka/lib/
 
 script:
 - if [[ "$TOXENV" == "linux_py2" ]]; then docker exec -it scikit_multilearn_dev_test_docker python -m pytest /home/python-dev/repo; fi
@@ -37,6 +38,8 @@ before_install:
 - if [[ "$TRAVIS_OS_NAME" == "osx" ]];   then brew install graph-tool                               ; fi
 - if [[ "$TRAVIS_OS_NAME" == "osx" ]];   then cd $TRAVIS_BUILD_DIR && pip install -r requirements-all.txt ; fi
 - if [[ "$TRAVIS_OS_NAME" == "osx" ]];   then cd $TRAVIS_BUILD_DIR && pip3 install -r requirements-all.txt; fi
+- if [[ "$TRAVIS_OS_NAME" == "osx" ]];   then wget https://adams.cms.waikato.ac.nz/snapshots/meka/meka-snapshot.zip -O /opt/meka.zip; fi
+- if [[ "$TRAVIS_OS_NAME" == "osx" ]];   then cd /opt && unzip -a meka.zip && mv meka-* meka && ls /opt/ && ls /opt/meka/; fi
 
 install:
 - if [[ "$TRAVIS_OS_NAME" != "osx" ]];   then docker run -e "MEKA_CLASSPATH=/opt/meka/lib/" -v "$TRAVIS_BUILD_DIR:/home/python-dev/repo" --name scikit_multilearn_dev_test_docker -d niedakh/scikit-multilearn-dev:latest; fi
