--- a/.travis.yml
+++ b/.travis.yml
@@ -38,8 +38,8 @@ before_install:
 - if [[ "$TRAVIS_OS_NAME" == "osx" ]];   then brew install graph-tool                               ; fi
 - if [[ "$TRAVIS_OS_NAME" == "osx" ]];   then cd $TRAVIS_BUILD_DIR && pip install -r requirements-all.txt ; fi
 - if [[ "$TRAVIS_OS_NAME" == "osx" ]];   then cd $TRAVIS_BUILD_DIR && pip3 install -r requirements-all.txt; fi
-- if [[ "$TRAVIS_OS_NAME" == "osx" ]];   then wget https://adams.cms.waikato.ac.nz/snapshots/meka/meka-snapshot.zip -O /opt/meka.zip; fi
-- if [[ "$TRAVIS_OS_NAME" == "osx" ]];   then cd /opt && unzip -a meka.zip && mv meka-* meka && ls /opt/ && ls /opt/meka/; fi
+- if [[ "$TRAVIS_OS_NAME" == "osx" ]];   then mkdir ~/MEKA && wget https://adams.cms.waikato.ac.nz/snapshots/meka/meka-snapshot.zip -O ~/MEKA/meka.zip; fi
+- if [[ "$TRAVIS_OS_NAME" == "osx" ]];   then cd ~/MEKA/ && unzip -a meka.zip && mv meka-* meka && ls ~/MEKA/; fi
 
 install:
 - if [[ "$TRAVIS_OS_NAME" != "osx" ]];   then docker run -e "MEKA_CLASSPATH=/opt/meka/lib/" -v "$TRAVIS_BUILD_DIR:/home/python-dev/repo" --name scikit_multilearn_dev_test_docker -d niedakh/scikit-multilearn-dev:latest; fi
