Support for Keras compatible classifiers (#138)
Implement wrapper for Keras scikit-compatible wraper.

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -28,22 +28,26 @@ environment:
     - PYTHON: "C:\\Python27.10"
       PYTHON_VERSION: "2.7.10"
       PYTHON_ARCH: "32"
+      HAS_KERAS: "0"
 
     - PYTHON: "C:\\Python27.10-x64"
       PYTHON_VERSION: "2.7.10"
       PYTHON_ARCH: "64"
+      HAS_KERAS: "0"
 
     # Pre-installed Python versions, which Appveyor may upgrade to
     # a later point release.
     # See: http://www.appveyor.com/docs/installed-software#python
 
-    - PYTHON: "C:\\Python34"
-      PYTHON_VERSION: "3.4.x" # currently 3.4.3
+    - PYTHON: "C:\\Python35"
+      PYTHON_VERSION: "3.6.x" # currently 3.4.3
       PYTHON_ARCH: "32"
+      HAS_KERAS: "0"
 
-    - PYTHON: "C:\\Python34-x64"
-      PYTHON_VERSION: "3.4.x" # currently 3.4.3
+    - PYTHON: "C:\\Python36-x64"
+      PYTHON_VERSION: "3.6.x" # currently 3.4.3
       PYTHON_ARCH: "64"
+      HAS_KERAS: "1"
 
 
 install:
@@ -90,6 +94,7 @@ install:
   # target Python version and architecture
   - "pip install -r requirements\\base.txt"
   - "pip install -r requirements\\meka.txt"
+  - ps: If ($env:HAS_KERAS -eq "1")  { & pip install -r requirements\\keras.txt }
   # - "pip install -r requirements\\gpl.txt"
   - "pip install -r requirements\\test.txt"
 
