--- a/.travis.yml
+++ b/.travis.yml
@@ -26,7 +26,7 @@ script:
 
 before_install:
 - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then docker rmi -f niedakh/scikit-multilearn-dev:latest    ; fi
-- if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then docker rm -f scikit_multilearn_dev_test_docker    ; fi
+#- if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then docker rm -f scikit_multilearn_dev_test_docker    ; fi
 - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then docker pull niedakh/scikit-multilearn-dev:latest      ; fi
 
 - if [[ "$TRAVIS_OS_NAME" == "osx" ]];   then pip2 uninstall -y numpy                               ; fi
