--- a/.travis.yml
+++ b/.travis.yml
@@ -42,17 +42,20 @@ before_install:
 
 install:
 - if [[ "$TRAVIS_OS_NAME" != "osx" ]];   then docker run -e "MEKA_CLASSPATH=/opt/meka/lib/" -v "$TRAVIS_BUILD_DIR:/home/python-dev/repo" --name scikit_multilearn_dev_test_docker -d niedakh/scikit-multilearn-dev:latest; fi
-#- if [[ "$TOXENV" == "linux_py2" ]]; then docker exec -it scikit_multilearn_dev_test_docker pip install -r /home/python-dev/repo/requirements-all.txt; fi
-#- if [[ "$TOXENV" == "linux_py3" ]]; then docker exec -it scikit_multilearn_dev_test_docker pip3 install -r /home/python-dev/repo/requirements-all.txt; fi
+- if [[ "$TOXENV" == "linux_py2" ]]; then docker exec -it scikit_multilearn_dev_test_docker pip install --upgrade --force-reinstall numpy scipy scikit-learn; fi
+- if [[ "$TOXENV" == "linux_py3" ]]; then docker exec -it scikit_multilearn_dev_test_docker pip3 install --upgrade --force-reinstall numpy scipy scikit-learn; fi
 #- if [[ "$TOXENV" == "linux_py2" ]]; then docker exec -it scikit_multilearn_dev_test_docker pip install -r /home/python-dev/repo/requirements/keras.txt; fi
 #- if [[ "$TOXENV" == "linux_py3" ]]; then docker exec -it scikit_multilearn_dev_test_docker pip3 install -r /home/python-dev/repo/requirements/keras.txt; fi
 - if [[ "$TRAVIS_OS_NAME" != "osx" ]];   then find $TRAVIS_BUILD_DIR -name \*.pyc -delete; fi
 
 - if [[ "$TRAVIS_OS_NAME" == "osx" ]];   then cd $TRAVIS_BUILD_DIR && pip install -r requirements/keras.txt; fi
 - if [[ "$TRAVIS_OS_NAME" == "osx" ]];   then cd $TRAVIS_BUILD_DIR && pip install -r requirements-all.txt ; fi
+- if [[ "$TRAVIS_OS_NAME" == "osx" ]];   then cd $TRAVIS_BUILD_DIR && pip install --upgrade --force-reinstall numpy scipy scikit-learn; fi
+
 - if [[ "$TRAVIS_OS_NAME" == "osx" ]];   then cd $TRAVIS_BUILD_DIR && pip3 install https://storage.googleapis.com/tensorflow/mac/cpu/tensorflow-1.12.0-py3-none-any.whl; fi
 - if [[ "$TRAVIS_OS_NAME" == "osx" ]];   then cd $TRAVIS_BUILD_DIR && pip3 install -r requirements/keras.txt; fi
 - if [[ "$TRAVIS_OS_NAME" == "osx" ]];   then cd $TRAVIS_BUILD_DIR && pip3 install -r requirements-all.txt; fi
+- if [[ "$TRAVIS_OS_NAME" == "osx" ]];   then cd $TRAVIS_BUILD_DIR && pip3 install --upgrade --force-reinstall numpy scipy scikit-learn; fi
 
 
 notifications:
