--- a/.travis.yml
+++ b/.travis.yml
@@ -21,8 +21,8 @@ matrix:
 script:
 - if [[ "$TOXENV" == "linux_py2" ]]; then docker exec -it scikit_multilearn_dev_test_docker python -m pytest /home/python-dev/repo; fi
 - if [[ "$TOXENV" == "linux_py3" ]]; then docker exec -it scikit_multilearn_dev_test_docker python3 -m pytest /home/python-dev/repo; fi
-- if [[ "$TRAVIS_OS_NAME" == "osx" ]];   then python3 -m pytest $TRAVIS_BUILD_DIR; fi
-- if [[ "$TRAVIS_OS_NAME" == "osx" ]];   then python -m pytest $TRAVIS_BUILD_DIR; fi
+- if [[ "$TRAVIS_OS_NAME" == "osx" ]];   then python3 -m pytest -p no:warnings  $TRAVIS_BUILD_DIR; fi
+- if [[ "$TRAVIS_OS_NAME" == "osx" ]];   then python -m pytest -p no:warnings  $TRAVIS_BUILD_DIR; fi
 
 before_install:
 - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then docker rmi -f niedakh/scikit-multilearn-dev:latest    ; fi
