--- a/appveyor.yml
+++ b/appveyor.yml
@@ -108,7 +108,7 @@ install:
 
 test_script:
   # Run the project tests
-  - "%CMD_IN_ENV% python -m pytest skmultilearn"
+  - "%CMD_IN_ENV% python -m pytest -p no:warnings skmultilearn"
 
 #after_test:
   # If tests are successful, create binary packages for the project.
