--- a/appveyor.yml
+++ b/appveyor.yml
@@ -81,7 +81,7 @@ install:
   - "SET PATH=%PYTHON%;%PYTHON%\\Scripts;%PATH%"
 
   # Check that we have the expected version and architecture for Python
-  - "%PYTHON%\\python.exe--version"
+  - "%PYTHON%\\python.exe --version"
   - "%PYTHON%\\python.exe -c \"import struct; print(struct.calcsize('P') * 8)\""
 
   # Upgrade to the latest version of pip to avoid it displaying warnings
@@ -92,15 +92,15 @@ install:
   # compiled extensions and are not provided as pre-built wheel packages,
   # pip will build them from source using the MSVC compiler matching the
   # target Python version and architecture
-  - "%PYTHON%\\pip.exe install -r requirements\\base.txt"
-  - "%PYTHON%\\pip.exe install -r requirements\\meka.txt"
-  - ps: If ($env:HAS_KERAS -eq "1")  { & %PYTHON%\\pip.exe install -r requirements\\keras.txt }
+  - "%PYTHON%\\Scripts\\pip.exe install -r requirements\\base.txt"
+  - "%PYTHON%\\Scripts\\pip.exe install -r requirements\\meka.txt"
+  - ps: If ($env:HAS_KERAS -eq "1")  { & %PYTHON%\\Scripts\\pip.exe install -r requirements\\keras.txt }
   - git clone https://github.com/thunlp/OpenNE C:\projects\OpenNE
-  - ps: If ($env:HAS_KERAS -eq "1")  { & %PYTHON%\\pip.exe install -e C:/projects/OpenNE/src }
-  - "%PYTHON%\\pip.exe install --upgrade scikit-learn numpy scipy"
+  - ps: If ($env:HAS_KERAS -eq "1")  { & %PYTHON%\\Scripts\\pip.exe install -e C:/projects/OpenNE/src }
+  - "%PYTHON%\\Scripts\\pip.exe install --upgrade scikit-learn numpy scipy"
   # - "pip install -r requirements\\gpl.txt"
-  - "%PYTHON%\\pip.exe install -r requirements\\test.txt"
-  - "%PYTHON%\\pip.exe install --upgrade --force-reinstall numpy scipy scikit-learn"
+  - "%PYTHON%\\Scripts\\pip.exe install -r requirements\\test.txt"
+  - "%PYTHON%\\Scripts\\pip.exe install --upgrade --force-reinstall numpy scipy scikit-learn"
 
 #build_script:
   # Build the compiled extension
