--- a/appveyor.yml
+++ b/appveyor.yml
@@ -25,13 +25,13 @@ environment:
 
     # Python 2.7.10 is the latest version and is not pre-installed.
 
-    - PYTHON: "C:\\Python27.10"
-      PYTHON_VERSION: "2.7.10"
+    - PYTHON: "C:\\Python27.14"
+      PYTHON_VERSION: "2.7.14"
       PYTHON_ARCH: "32"
       HAS_KERAS: "0"
 
-    - PYTHON: "C:\\Python27.10-x64"
-      PYTHON_VERSION: "2.7.10"
+    - PYTHON: "C:\\Python27.14-x64"
+      PYTHON_VERSION: "2.7.14"
       PYTHON_ARCH: "64"
       HAS_KERAS: "0"
 
@@ -39,7 +39,7 @@ environment:
     # a later point release.
     # See: http://www.appveyor.com/docs/installed-software#python
 
-    - PYTHON: "C:\\Python35"
+    - PYTHON: "C:\\Python36"
       PYTHON_VERSION: "3.6.x" # currently 3.4.3
       PYTHON_ARCH: "32"
       HAS_KERAS: "0"
@@ -81,22 +81,26 @@ install:
   - "SET PATH=%PYTHON%;%PYTHON%\\Scripts;%PATH%"
 
   # Check that we have the expected version and architecture for Python
-  - "python --version"
-  - "python -c \"import struct; print(struct.calcsize('P') * 8)\""
+  - "%PYTHON%\\python.exe --version"
+  - "%PYTHON%\\python.exe -c \"import struct; print(struct.calcsize('P') * 8)\""
 
   # Upgrade to the latest version of pip to avoid it displaying warnings
   # about it being out of date.
-  - "python -m pip install --upgrade pip"
+  - "%PYTHON%\\python.exe -m pip install --upgrade pip"
 
   # Install the build dependencies of the project. If some dependencies contain
   # compiled extensions and are not provided as pre-built wheel packages,
   # pip will build them from source using the MSVC compiler matching the
   # target Python version and architecture
-  - "pip install -r requirements\\base.txt"
-  - "pip install -r requirements\\meka.txt"
-  - ps: If ($env:HAS_KERAS -eq "1")  { & pip install -r requirements\\keras.txt }
+  - "%PYTHON%\\Scripts\\pip.exe install -r requirements\\base.txt"
+  - "%PYTHON%\\Scripts\\pip.exe install -r requirements\\meka.txt"
+  - ps: If ($env:HAS_KERAS -eq "1")  { &  $env:PYTHON\Scripts\pip.exe install -r requirements\keras.txt }
+  - git clone https://github.com/thunlp/OpenNE C:\projects\OpenNE
+  - ps: If ($env:HAS_KERAS -eq "1")  { &  $env:PYTHON\Scripts\pip.exe install -e C:/projects/OpenNE/src }
+  - "%PYTHON%\\Scripts\\pip.exe install --upgrade scikit-learn numpy scipy"
   # - "pip install -r requirements\\gpl.txt"
-  - "pip install -r requirements\\test.txt"
+  - "%PYTHON%\\Scripts\\pip.exe install -r requirements\\test.txt"
+  - "%PYTHON%\\Scripts\\pip.exe install --upgrade --force-reinstall numpy scipy scikit-learn"
 
 #build_script:
   # Build the compiled extension
@@ -104,7 +108,7 @@ install:
 
 test_script:
   # Run the project tests
-  - "py.test skmultilearn"
+  - "%PYTHON%\\python.exe -m pytest -p no:warnings skmultilearn"
 
 #after_test:
   # If tests are successful, create binary packages for the project.
