--- a/appveyor.yml
+++ b/appveyor.yml
@@ -110,16 +110,16 @@ test_script:
   # Run the project tests
   - "%PYTHON%\\python.exe -m pytest -p no:warnings skmultilearn"
 
-#after_test:
+after_test:
   # If tests are successful, create binary packages for the project.
-  #- "%CMD_IN_ENV% python setup.py bdist_wheel"
-  #- "%CMD_IN_ENV% python setup.py bdist_wininst"
-  #- "%CMD_IN_ENV% python setup.py bdist_msi"
-  #- ps: "ls dist"
+  - "%PYTHON%\\python.exe setup.py bdist_wheel"
+  - "%PYTHON%\\python.exe setup.py bdist_wininst"
+  - "%PYTHON%\\python.exesetup.py bdist_msi"
+  - ps: "ls dist"
 
-#artifacts:
+artifacts:
   # Archive the generated packages in the ci.appveyor.com build report.
-#  - path: dist\*
+  - path: dist\*
 
 #on_success:
 #  - TODO: upload the content of dist/*.whl to a public wheelhouse
